--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@ div.desc {
 
 <div class="gallery">
   <a target="_blank" href="Q1.jpg">
-    <img src="Q1.jpg" alt="Cinque Terre" width="1000" height="800">
-  </a>
-  <div class="desc"></div>
-</div>
-  <div class="gallery">
-  <a target="_blank" href="Q1.jpg">
-    <img src="Q2.jpg" alt="Cinque Terre" width="1000" height="800">
-  </a>
-  <div class="desc"></div>
-<div class="gallery">
-  <a target="_blank" href="Q1.jpg">
-    <img src="Q3.jpg" alt="Cinque Terre" width="1000" height="800">
+    <img src="Q1.jpg" alt="Shravan" width="1000" height="800">
   </a>
   <div class="desc"></div>
 </div>
 <div class="gallery">
-  <a target="_blank" href="Q1.jpg">
-    <img src="Q4.jpg" alt="Cinque Terre" width="1000" height="800">
+ <a target="_blank" href="Q1.jpg">
+   <img src="Q2.jpg" alt="Shravan" width="1000" height="800">
+ </a>
+<div class="desc"></div>
+  </div>
+<div class="gallery">
+  <a target="_blank" href="Q3.jpg">
+    <img src="Q3.jpg" alt="Shravan" width="1000" height="800">
   </a>
   <div class="desc"></div>
 </div>
+<div class="gallery">
+  <a target="_blank" href="Q4.jpg">
+    <img src="Q4.jpg" alt="Shravan" width="1000" height="800">
+  </a>
+  <div class="desc"></div>
 </div>
 </body>
 </html>
