--- a/index.html
+++ b/index.html
@@ -50,5 +50,41 @@ div.desc {
   </a>
   <div class="desc"></div>
 </div>
+  <div class="gallery">
+  <a target="_blank" href="Q5.jpg">
+    <img src="Q5.jpg" alt="Shravan" width="1000" height="800">
+  </a>
+  <div class="desc"></div>
+</div>
+ <div class="gallery">
+  <a target="_blank" href="Q6.jpg">
+    <img src="Q6.jpg" alt="Shravan" width="1000" height="800">
+  </a>
+  <div class="desc"></div>
+</div>
+<div class="gallery">
+  <a target="_blank" href="Q7.jpg">
+    <img src="Q7.jpg" alt="Shravan" width="1000" height="800">
+  </a>
+  <div class="desc"></div>
+</div>
+  <div class="gallery">
+  <a target="_blank" href="Q8.jpg">
+    <img src="Q8.jpg" alt="Shravan" width="1000" height="800">
+  </a>
+  <div class="desc"></div>
+</div>
+<div class="gallery">
+  <a target="_blank" href="Q9.jpg">
+    <img src="Q9.jpg" alt="Shravan" width="1000" height="800">
+  </a>
+  <div class="desc"></div>
+</div>
+<div class="gallery">
+  <a target="_blank" href="Q10.jpg">
+    <img src="Q10.jpg" alt="Shravan" width="1000" height="800">
+  </a>
+  <div class="desc"></div>
+</div>
 </body>
 </html>
