--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ div.desc {
   </a>
   <div class="desc"></div>
 </div>
-<div class="gallery">
+<!--<div class="gallery">
   <a target="_blank" href="Q7.jpg">
     <img src="Q7.jpg" alt="Shravan" width="1000" height="800">
   </a>
@@ -85,6 +85,6 @@ div.desc {
     <img src="Q10.jpg" alt="Shravan" width="1000" height="800">
   </a>
   <div class="desc"></div>
-</div>
+</div>-->
 </body>
 </html>
