--- a/hanumanchalisa.html
+++ b/hanumanchalisa.html
@@ -2,46 +2,84 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Hanuman Chalisa</title>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&family=Noto+Sans+Telugu&display=swap" rel="stylesheet">
+  <title>Hanuman Chalisa | Hindu Devotional</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&family=Noto+Sans+Telugu&family=Crimson+Pro:wght@600&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Noto Sans Devanagari', sans-serif;
-      max-width: 800px;
-      margin: auto;
-      padding: 20px;
+      background: #fdf6e3;
+      color: #333;
+      margin: 0;
+      padding: 0;
       line-height: 1.6;
     }
-    #controls {
+    header {
+      background: #b71c1c;
+      color: #fff;
+      padding: 20px 10px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-family: 'Crimson Pro', serif;
+    }
+    nav {
+      background: #d32f2f;
+      text-align: center;
+      padding: 10px 0;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      max-width: 900px;
+      margin: 20px auto;
+      padding: 20px;
+      background: #fff8e1;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    footer {
+      background: #b71c1c;
+      color: #fff;
+      text-align: center;
+      padding: 15px 10px;
       margin-top: 20px;
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: 10px;
     }
-    select {
+    select, button {
       font-size: 1rem;
-      padding: 4px;
+      margin: 5px;
     }
-    .zoom-btn {
-      font-size: 1.2rem;
-      padding: 4px 10px;
-      cursor: pointer;
+    .font-controls {
+      margin: 15px 0;
     }
     #chalisa {
       margin-top: 20px;
-      white-space: normal;
     }
     @media (max-width: 600px) {
-      body { padding: 10px; }
-      #controls { flex-direction: column; align-items: flex-start; }
+      nav a { display: block; margin: 5px 0; }
     }
   </style>
 </head>
 <body>
-  <h1>श्री हनुमान चालीसा | Hanuman Chalisa</h1>
-
-  <div id="controls">
+  <header>
+    <h1>🙏 श्री हनुमान चालीसा 🙏</h1>
+    <p>A Hindu Devotional Collection</p>
+  </header>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">Ramayana</a>
+    <a href="#">Bhagavad Gita</a>
+    <a href="#">Stotras</a>
+  </nav>
+  <main>
     <label for="language">Choose Language:</label>
     <select id="language">
       <optgroup label="Indian Languages">
@@ -53,47 +91,43 @@
         <option value="english">English</option>
       </optgroup>
     </select>
-
-    <button class="zoom-btn" id="zoom-in">A+</button>
-    <button class="zoom-btn" id="zoom-out">A−</button>
-  </div>
-
-  <div id="chalisa"></div>
+    <div class="font-controls">
+      <button id="zoomIn">A+</button>
+      <button id="zoomOut">A-</button>
+    </div>
+    <div id="chalisa"></div>
+  </main>
+  <footer>
+    © 2025 Your Hindu Devotional Site | 🌺 Jai Shree Ram 🌺
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script>
     let chalisaText = {};
-    let currentFontSize = 1.2; // initial rem for Chalisa text
-
     const fonts = {
       hindi: 'Noto Sans Devanagari',
       sanskrit: 'Noto Sans Devanagari',
       telugu: 'Noto Sans Telugu',
       english: 'sans-serif'
     };
-
     function updateChalisa() {
       const lang = $('#language').val();
-      $('#chalisa').html(chalisaText[lang] || "<p>Coming soon...</p>");
+      $('#chalisa').html(chalisaText[lang]);
       $('body').css('font-family', fonts[lang]);
-      $('#chalisa').css('font-size', currentFontSize + 'rem');
     }
-
     $.getJSON('chalisa.json', function(data) {
       chalisaText = data;
       updateChalisa();
     });
-
     $('#language').on('change', updateChalisa);
-
-    $('#zoom-in').on('click', function() {
-      currentFontSize += 0.1;
-      $('#chalisa').css('font-size', currentFontSize + 'rem');
+    let fontSize = 18;
+    $('#zoomIn').click(function() {
+      fontSize += 2;
+      $('#chalisa').css('font-size', fontSize + 'px');
     });
-
-    $('#zoom-out').on('click', function() {
-      currentFontSize = Math.max(0.6, currentFontSize - 0.1); // prevent too small
-      $('#chalisa').css('font-size', currentFontSize + 'rem');
+    $('#zoomOut').click(function() {
+      fontSize = Math.max(12, fontSize - 2);
+      $('#chalisa').css('font-size', fontSize + 'px');
     });
   </script>
 </body>
