--- a/hanumanchalisa.html
+++ b/hanumanchalisa.html
@@ -98,7 +98,7 @@
     <div id="chalisa"></div>
   </main>
   <footer>
-    © 2025 Your Hindu Devotional Site | 🌺 Jai Shree Ram 🌺
+       🌺  हरे कृष्ण 🌺  | 🌺 जय श्री राम 🌺 | 🌺 ओम नमः शिवाय 🌺 | 🌺 जय माता दी 🌺 | 🌺 सत्यमेव जयते 🌺 | 🌺 ओम नमो: नारायण 🌺
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
