--- a/hanumanchalisa.html
+++ b/hanumanchalisa.html
@@ -86,8 +86,13 @@
         <option value="sanskrit">Sanskrit</option>
         <option value="hindi" selected>Hindi</option>
         <option value="telugu">Telugu</option>
+        <option value="marathi">Marathi</option>
+        <option value="sindhi">sindhi</option>
+        <option value="konkani">Konkani</option>
+         <option value="maithili">Maithili</option>
       </optgroup>
       <optgroup label="Other Languages">
+        <option value="nepali">nepali</option>
         <option value="english">English</option>
       </optgroup>
     </select>
