--- a/hanumanchalisa.html
+++ b/hanumanchalisa.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <title>Hanuman Chalisa | Hindu Devotional</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Read the sacred Hanuman Chalisa in Hindi, Sanskrit, Telugu, and English with beautiful font, meaning, and easy zoom. 🙏 जय श्री राम 🙏">
+  <meta name="keywords" content="Hanuman Chalisa, श्री हनुमान चालीसा, Hanuman Chalisa Hindi, Hanuman Chalisa Telugu, Hanuman Chalisa English, Hanuman Chalisa PDF, Bajrangbali Chalisa, Jai Hanuman, Hindu Stotra, Hindu Devotional Songs, Ramayana, Bhajans, Chalisa Lyrics, Devotional Website, Hindu Prayers, Chalisa Translation, Hanuman Bhakti">
+  <meta name="Pattiwar Shravan Kumar" content="shravanpattiwar.gq">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&family=Noto+Sans+Telugu&family=Crimson+Pro:wght@600&display=swap" rel="stylesheet">
   <style>
     body {
