--- a/hanumanchalisa.html
+++ b/hanumanchalisa.html
@@ -95,7 +95,7 @@
          <option value="maithili">Maithili</option>
       </optgroup>
       <optgroup label="Other Languages">
-        <option value="nepali">nepali</option>
+        <option value="nepali">Nepali</option>
         <option value="english">English</option>
       </optgroup>
     </select>
